[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name="stac-pydantic"
description="Pydantic data models for the STAC spec"
classifiers=[
        "Intended Audience :: Developers",
        "Intended Audience :: Information Technology",
        "Intended Audience :: Science/Research",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "License :: OSI Approved :: MIT License",
]
keywords=["stac", "pydantic", "validation"]
authors=[{ name = "Arturo Engineering", email = "engineering@arturo.ai"}]
license= { text = "MIT" }
requires-python=">=3.8"
dependencies = [
        "click>=8.1.7",
        "pydantic>=2.4.1",
        "geojson-pydantic>=1.0.0",
]
dynamic = ["version", "readme"]

[project.scripts]
stac-pydantic = "stac_pydantic.scripts.cli:app"

[project.urls]
homepage = "https://github.com/stac-utils/stac-pydantic"
repository ="https://github.com/stac-utils/stac-pydantic.git"

[project.optional-dependencies]
validation = ["jsonschema>=4.19.1", "requests>=2.31.0"]

dev = [
        "pytest>=7.4.2",
        "pytest-cov>=4.1.0",
        "pytest-icdiff>=0.8",
        "requests>=2.31.0",
        "shapely>=2.0.1",
        "dictdiffer>=0.9.0",
        "jsonschema>=4.19.1",
        "pyyaml>=6.0.1"
]

lint = [
        "types-requests>=2.31.0.5",
        "types-jsonschema>=4.19.0.3",
        "types-PyYAML>=6.0.12.12",
        "black>=23.9.1",
        "isort>=5.12.0",
        "flake8>=6.1.0",
        "Flake8-pyproject>=1.2.3",
        "mypy>=1.5.1",
        "pre-commit>=3.4.0",
        "tox>=4.11.3"
]

[tool.setuptools.dynamic]
version = { attr = "stac_pydantic.version.__version__" }
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools.package-data]
stac_pydantic= ["*.typed"]

[tool.setuptools.packages.find]
include = ["stac_pydantic*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
addopts = "-sv --cov stac_pydantic --cov-report xml --cov-report term-missing  --cov-fail-under 95"

[tool.isort]
profile = "black"
known_first_party = "stac_pydantic"
known_third_party = ["pydantic", "geojson-pydantic", "click"]
default_section = "THIRDPARTY"

[tool.mypy]
ignore_missing_imports = true
exclude = ["tests", ".venv"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
        "C",
        "E",
        "F",
        "W",
        "B",
]
ignore = [
    "E203",  # line too long, handled by black
    "E501",  # do not perform function calls in argument defaults
    "B028",  # No explicit `stacklevel` keyword argument found
]
